--- a/Variable.yaml
+++ b/Variable.yaml
@@ -1,8 +1,10 @@
-- name: Play for variable
+#- name: Play for variable
   hosts: all
   vars:
     url: example.com
   tasks:
     - name: Print a value
+      vars:
+        url: example.com
       ansible.builtin.debug:
         msg: URL - {{url}}
