--- a/Variable.yaml
+++ b/Variable.yaml
@@ -1,11 +1,8 @@
-#- name: Play for variable
-  #hosts: all
-  #vars:
-   # url: example.com
+- name: Play for variable
+  hosts: all
+  vars:
+   url: example.com
   tasks:
     - name: Print a value
-      hosts: all
-      vars:
-      url: example.com
       ansible.builtin.debug:
         msg: URL - {{url}}
