Play for command line variable

--- a/Variable.yaml
+++ b/Variable.yaml
@@ -9,7 +9,7 @@
       ansible.builtin.debug:
         msg: URL - {{url}}
              A+B - {{a}}+{{b}}
-- name: Play for command line variable
+- name: Play for command line variables
   hosts: all
   tasks:
     - name: Play for command line variable
